crates/fec-parser/tests/snapshots/covers__f3pn_1920459.snap
---
source: crates/fec-parser/tests/covers.rs
expression: "cover(\"F3PN_1920459.fec\")"
snapshot_kind: text
---
{
  "form": "Form3P",
  "data": {
    "form_type": "F3PN",
    "filer_committee_id_number": "C00384073",
    "committee_name": "EDWARDS FOR PRESIDENT",
    "address": {
      "street_1": "C/O 29 BRIARWOOD DRIVE",
      "street_2": null,
      "city": "RINGGOLD",
      "state": "GA",
      "zip_code": "30736"
    },
    "change_of_address": false,
    "activity_primary": false,
    "activity_general": false,
    "report_code": "Q3",
    "election_code": null,
    "election_date": null,
    "state_of_election": null,
    "coverage_from_date": "2025-07-01",
    "coverage_through_date": "2025-09-30",
    "treasurer": {
      "first_name": "Lora",
      "last_name": "Haggard",
      "middle_name": null,
      "prefix": null,
      "suffix": null
    },
    "date_signed": "2025-10-15",
    "summary": {
      "line6_cash_on_hand_beginning_period": 0.0,
      "line7_total_receipts": 0.0,
      "line8_subtotal": 0.0,
      "line9_total_disbursements": 0.0,
      "line10_cash_on_hand_end_period": 0.0,
      "line11_debts_owed_to_committee": 0.0,
      "line12_debts_owed_by_committee": 331586.46,
      "line13_expenditures_subject_to_limits": 26477163.49,
      "line14_net_contributions_other_than_loans": 21659403.9,
      "line15_net_operating_expenditures": 19529492.32
    },
    "detailed_summary": {
      "receipts": {
        "line16_federal_funds": {
          "column_a": 0.0,
          "column_b": 6706458.44
        },
        "line17a_i_contributions_from_individuals_itemized": {
          "column_a": 0.0,
          "column_b": 21896886.23
        },
        "line17a_ii_contributions_from_individuals_unitemized": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17a_iii_contributions_from_individuals_total": {
          "column_a": 0.0,
          "column_b": 21896886.23
        },
        "line17b_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17c_other_political_committees": {
          "column_a": 0.0,
          "column_b": 2000.0
        },
        "line17d_the_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17e_total_contributions": {
          "column_a": 0.0,
          "column_b": 21898886.23
        },
        "line18_transfers_from_other_authorized_committee": {
          "column_a": 0.0,
          "column_b": 962908.26
        },
        "line19a_loans_received_from_or_guaranteed_by_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line19b_other_loans": {
          "column_a": 0.0,
          "column_b": 2470613.53
        },
        "line19c_total_loans": {
          "column_a": 0.0,
          "column_b": 2470613.53
        },
        "line20a_offsets_to_expenditures_operating": {
          "column_a": 0.0,
          "column_b": 1715161.47
        },
        "line20b_offsets_to_expenditures_fundraising": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line20c_offsets_to_expenditures_legal_and_accounting": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line20d_offsets_to_expenditures_total": {
          "column_a": 0.0,
          "column_b": 1715161.47
        },
        "line21_other_receipts": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line22_total_receipts": {
          "column_a": 0.0,
          "column_b": 33754027.93
        }
      },
      "disbursements": {
        "line23_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 21244653.79
        },
        "line24_transfers_to_other_authorized_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line25_fundraising_disbursements": {
          "column_a": 0.0,
          "column_b": 6947671.17
        },
        "line26_exempt_legal_and_accounting_disbursements": {
          "column_a": 0.0,
          "column_b": 2847441.1
        },
        "line27a_loan_repayments_candidate": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line27b_loan_repayments_other": {
          "column_a": 0.0,
          "column_b": 2470613.53
        },
        "line27c_loan_repayments_total": {
          "column_a": 0.0,
          "column_b": 2470613.53
        },
        "line28a_refunds_to_individuals": {
          "column_a": 0.0,
          "column_b": 239482.33
        },
        "line28b_refunds_to_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28c_refunds_to_other_political_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28d_refunds_total": {
          "column_a": 0.0,
          "column_b": 239482.33
        },
        "line29_other_disbursements": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30_total_disbursements": {
          "column_a": 0.0,
          "column_b": 33749861.92
        }
      },
      "line31_items_on_hand_to_be_liquidated": 0.0
    },
    "state_allocations": {
      "states": [
        {
          "state": "Alabama",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1591.61
          }
        },
        {
          "state": "Alaska",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Arizona",
          "allocation": {
            "column_a": 0.0,
            "column_b": 5384.54
          }
        },
        {
          "state": "Arkansas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1132.59
          }
        },
        {
          "state": "California",
          "allocation": {
            "column_a": 0.0,
            "column_b": 51645.61
          }
        },
        {
          "state": "Colorado",
          "allocation": {
            "column_a": 0.0,
            "column_b": 530.76
          }
        },
        {
          "state": "Connecticut",
          "allocation": {
            "column_a": 0.0,
            "column_b": 3670.57
          }
        },
        {
          "state": "Delaware",
          "allocation": {
            "column_a": 0.0,
            "column_b": 5.15
          }
        },
        {
          "state": "District of Columbia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 16701.42
          }
        },
        {
          "state": "Florida",
          "allocation": {
            "column_a": 0.0,
            "column_b": 3318.84
          }
        },
        {
          "state": "Georgia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 384569.94
          }
        },
        {
          "state": "Hawaii",
          "allocation": {
            "column_a": 0.0,
            "column_b": 675.0
          }
        },
        {
          "state": "Idaho",
          "allocation": {
            "column_a": 0.0,
            "column_b": 11.98
          }
        },
        {
          "state": "Illinois",
          "allocation": {
            "column_a": 0.0,
            "column_b": 34916.29
          }
        },
        {
          "state": "Indiana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1099.48
          }
        },
        {
          "state": "Iowa",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1313622.0
          }
        },
        {
          "state": "Kansas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 5560.5
          }
        },
        {
          "state": "Kentucky",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Louisiana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1028.94
          }
        },
        {
          "state": "Maine",
          "allocation": {
            "column_a": 0.0,
            "column_b": 31639.98
          }
        },
        {
          "state": "Maryland",
          "allocation": {
            "column_a": 0.0,
            "column_b": 7941.4
          }
        },
        {
          "state": "Massachusetts",
          "allocation": {
            "column_a": 0.0,
            "column_b": 509679.72
          }
        },
        {
          "state": "Michigan",
          "allocation": {
            "column_a": 0.0,
            "column_b": 8061.49
          }
        },
        {
          "state": "Minnesota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 100268.44
          }
        },
        {
          "state": "Mississippi",
          "allocation": {
            "column_a": 0.0,
            "column_b": 10.96
          }
        },
        {
          "state": "Missouri",
          "allocation": {
            "column_a": 0.0,
            "column_b": 107061.09
          }
        },
        {
          "state": "Montana",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Nebraska",
          "allocation": {
            "column_a": 0.0,
            "column_b": 16352.6
          }
        },
        {
          "state": "Nevada",
          "allocation": {
            "column_a": 0.0,
            "column_b": 8.46
          }
        },
        {
          "state": "New Hampshire",
          "allocation": {
            "column_a": 0.0,
            "column_b": 502847.28
          }
        },
        {
          "state": "New Jersey",
          "allocation": {
            "column_a": 0.0,
            "column_b": 5019.61
          }
        },
        {
          "state": "New Mexico",
          "allocation": {
            "column_a": 0.0,
            "column_b": 61502.48
          }
        },
        {
          "state": "New York",
          "allocation": {
            "column_a": 0.0,
            "column_b": 183347.97
          }
        },
        {
          "state": "North Carolina",
          "allocation": {
            "column_a": 0.0,
            "column_b": 120103.37
          }
        },
        {
          "state": "North Dakota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 121.95
          }
        },
        {
          "state": "Ohio",
          "allocation": {
            "column_a": 0.0,
            "column_b": 379598.47
          }
        },
        {
          "state": "Oklahoma",
          "allocation": {
            "column_a": 0.0,
            "column_b": 330503.13
          }
        },
        {
          "state": "Oregon",
          "allocation": {
            "column_a": 0.0,
            "column_b": 3065.19
          }
        },
        {
          "state": "Pennsylvania",
          "allocation": {
            "column_a": 0.0,
            "column_b": 8718.71
          }
        },
        {
          "state": "Rhode Island",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "South Carolina",
          "allocation": {
            "column_a": 0.0,
            "column_b": 900211.5
          }
        },
        {
          "state": "South Dakota",
          "allocation": {
            "column_a": 0.0,
            "column_b": 2244.92
          }
        },
        {
          "state": "Tennessee",
          "allocation": {
            "column_a": 0.0,
            "column_b": 207805.97
          }
        },
        {
          "state": "Texas",
          "allocation": {
            "column_a": 0.0,
            "column_b": 30659.11
          }
        },
        {
          "state": "Utah",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1125.0
          }
        },
        {
          "state": "Vermont",
          "allocation": {
            "column_a": 0.0,
            "column_b": 41993.79
          }
        },
        {
          "state": "Virginia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 177643.59
          }
        },
        {
          "state": "Washington",
          "allocation": {
            "column_a": 0.0,
            "column_b": 2415.13
          }
        },
        {
          "state": "West Virginia",
          "allocation": {
            "column_a": 0.0,
            "column_b": 1130.15
          }
        },
        {
          "state": "Wisconsin",
          "allocation": {
            "column_a": 0.0,
            "column_b": 173050.83
          }
        },
        {
          "state": "Wyoming",
          "allocation": {
            "column_a": 0.0,
            "column_b": 2.33
          }
        },
        {
          "state": "Puerto Rico",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Guam",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        },
        {
          "state": "Virgin Islands",
          "allocation": {
            "column_a": 0.0,
            "column_b": 0.0
          }
        }
      ],
      "totals": {
        "column_a": 0.0,
        "column_b": 5739599.83
      }
    }
  }
}
